Fix css errors and spelling

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: georgia, serif;
+  font-family: Georgia, serif;
   background-color: #f0eee8;
   line-height: 1.5;
 }
@@ -27,7 +27,7 @@ html {
 
 .link-card h2 {
   display: inline-block;
-  font-family: "Dosis", sans-serif;
+  font-family: Dosis, sans-serif;
   margin: 0 0 1rem;
 }
 
@@ -66,12 +66,12 @@ p {
 }
 
 .btn span {
-  font-family: "Dosis", sans-serif;
+  font-family: Dosis, sans-serif;
   font-size: 1.125rem;
   background-color: #785439;
   color: #fff;
   padding: .4em .75em .5em;
-  border-radius: 8px
+  border-radius: 8px;
 }
 
 .link-card:hover {
