--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
   background-color: #dcd4cd;
   padding: 1rem;
   border: 3px solid #9a816d;
-  border-radius: 3px;
+  border-radius: 8px;
   text-decoration: none;
   color: #512200;
 }
@@ -28,6 +28,7 @@ html {
 .link-card h2 {
   display: inline-block;
   font-family: Dosis, sans-serif;
+  line-height: 1.5rem;
   margin: 0 0 1rem;
 }
 
@@ -38,7 +39,7 @@ p {
 
 .list {
   display: inline-block;
-  margin: 0 0 1rem;
+  margin: 0 0 1.3rem;
   border-top: 2px solid #9a816d;
   border-bottom: 2px solid #9a816d;
 }
@@ -50,7 +51,6 @@ p {
 
 .list dt {
   display: inline-block;
-  margin-bottom: .1em;
   width: 8.3em;
 }
 
@@ -63,6 +63,7 @@ p {
 
 .btn {
   text-align: center;
+  margin: 0 0 .7rem;
 }
 
 .btn span {
